[package]
name = "atsi"
version = "0.0.11"
edition = "2021"

[dependencies]
clap = "3.2.22"
ctrlc = "3.4.0"
derive-getters = "0.3.0"
dirs = "5.0.1"
flate2 = "1.0.26"
futures = "0.3.28"
haikunator = "0.1.2"
log = "0.4.19"
nix = "0.26.2"
pretty_env_logger = "0.5.0"
prettytable-rs = "0.10.0"
reqwest = "0.11.18"
rlimit = "0.10.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tar = "0.4.39"
tokio = { version = "1.29.1", features = [ "full" ] }
yaml-rust = "0.4.5"
